--- a/임시/resume copy.html
+++ b/임시/resume copy.html
@@ -187,8 +187,8 @@
           <div class="row">
             <div class="col-md-12 col-lg-8">
               <div class="title-single-box">
-                <h1 class="title-single">이력서</h1>
-                <span class="color-text-a">설명글</span>
+                <h1 class="title-single">이력서 제목</h1>
+                <span class="color-text-a">작성일</span>
               </div>
             </div>
             <div class="col-md-12 col-lg-4">
@@ -214,45 +214,30 @@
           <div class="resume-overlay-a-content">
             <form action="Post" class="form-a">
               <div class="form-group-resume-info">
-                <div class="mb-4">
-                  <div class="form-group-a  mb-2">
-                    <input type="text" class="form-control opac_zero_box resume_title" id="resume_title" autocomplete='off' placeholder="이력서 제목" value="">
-                  </div>
+                <div class="info_fill mb-4 rounded">
                   <table class="resume_info_table">
                     <tr>
                       <td rowspan="3">
-                        <td rowspan="3">
                         <div>
                           <img src="img/resume_photo.jpg" alt="" class="rounded resume_photo">
                         </div>
                       </td>
                       <td>
-                        <div class="form-group-a">
-                          <input type="text" class="form-control opac_zero_box resume_info" id="resume_name" autocomplete='off' placeholder="이름" value="">
-                        </div>
+                          <p>이름</p>
                       </td>
                     </tr>
                     <tr>
                       <td>
-                        <div class="form-group-a">
-                          <input type="text" class="form-control opac_zero_box resume_info" id="resume_email" autocomplete='off' placeholder="이메일" value="">
-                        </div>
+                          <p>이메일</p>
                       </td>
                     </tr>
                     <tr>
                       <td>
-                        <div class="form-group-a">
-                          <input type="text" class="form-control opac_zero_box resume_info" id="resume_phone" autocomplete='off' placeholder="전화번호" value="">
-                        </div>
+                          <p>전화번호</p>
                       </td>
                     </tr>
                   </table>
                 </div>
-              </div>
-
-              <div class="form-group resume_file_upload">
-                <input type="file" id="resume_photo_file" class="mb-2">
-                <p class="help-block">이력서에 사용할 이미지를 선택해주세요</p>
               </div>
 
               <div class="form-group-resume-content">
